# rashomon-framework

./: .gitignore  README.md  run_exp.py  run_result.py
config/: default.yaml  fairness.yaml  integration.yaml  privacy.yaml  robustness.yaml  stability.yaml
data/: bank-marketing.csv  dataset_info.csv  dataset_info.md  dataset_info.tex  default-credit.csv  diabetes.csv  fico.csv
data/dpf/: Diabetes130US.csv  adult.csv  bank-marketing.csv  census-income.csv  communities-crime.csv  default-credit.csv  fico.csv  german-credit.csv  oulad.csv  student-mat.csv  student-por.csv
module/: __init__.py  datasets.py  experiment.py  hparams.py  result.py  threshold_guess.py  utils.py
module/metric/: __init__.py  base_metrics.py  fairness_metric.py  kantch_metric.py  metric.py  mia_metric.py  stability_metric.py  standard_metric.py
module/metric/lib/kantch/: adversary.py  decision_tree_attack.py  kantchelian_attack.py  toolbox.py
module/model/: __init__.py
module/model/core/: __init__.py  base.py  post_base.py  rash_base.py
module/model/fairness/: __init__.py  dpf.py  fairoct.py  post_cart.py  post_rf.py  post_xgboost.py
module/model/lib/: fprdt.py  linear_post.py  tree_classifier.py
module/model/lib/dpf/: CMakeLists.txt  Dockerfile  README.md
module/model/lib/dpf/include/: base.h
module/model/lib/dpf/include/model/: binary_data.h  branch.h  container.h  feature_vector_binary.h  internal_node_description.h  pareto_front.h  partial_solution.h
module/model/lib/dpf/include/solver/: abstract_cache.h  branch_cache.h  counter.h  dataset_cache.h  decision_node.h  difference_computer.h  feature_selector.h  similarity_lowerbound.h  solver.h  solver_result.h  statistics.h  terminal_solver.h
module/model/lib/dpf/include/utils/: file_reader.h  parameter_handler.h  stopwatch.h
module/model/lib/dpf/src/solver/: define_parameters.cpp
module/model/lib/dpf/test/: pareto_test.cpp
module/model/privacy/: __init__.py  bdpt.py  dpldt.py  priva.py
module/model/rash/: __init__.py  treefarms.py
module/model/robustness/: __init__.py  fprdt.py  groot.py  roctn.py  roctv.py
module/model/standard/: __init__.py  cart_wrapper.py
script/: script_fairness.py  script_integration.py  script_privacy.py  script_robustness.py  script_stability.py
